client-panel/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/proxy-set-headers: "ingress-nginx/custom-headers"
spec:
  rules:
    - host: myapp.local
      http:
        paths:
          - pathType: Prefix
            path: /api/register
            backend:
              service:
                name: backend-userflow
                port:
                  number: 8000

          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-userflow
                port:
                  number: 80
